# density-fitness

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile.in  README.md  changelog  configure  configure.ac
cmake/: Patch.cmake  dependencies.cmake  fftw-h.patch  provider.cmake
config/m4/: ax_libclipper.m4  ax_libpdb-redo.m4  ax_libzeep.m4  ax_newuoa.m4
doc/: density-fitness.1  density-fitness.html
scripts/: check-stats.sh  fmt-eds.pl  plot-eds.pl
src/: config.hpp.in  density-fitness.cpp  density-fitness.hpp  main.cpp  revision.hpp  revision.hpp.in
test/: 1cbs-eds.eds  1cbs_map.mtz  unit-test-density-fitness.cpp
